--- a/assets/ui.html
+++ b/assets/ui.html
@@ -62,7 +62,8 @@
         <input onfocus="select_next_mouseup = true;"
             onmouseup="if (select_next_mouseup) this.select(); select_next_mouseup = false;" type="text"
             id="address"></input>
-        <span id="toggle-tools" class="icon" role="button" tabindex="0" aria-label="Toggle inspector" data-tooltip="Inspector">
+        <span id="toggle-tools" class="icon" role="button" tabindex="0" aria-label="Toggle inspector"
+            data-tooltip="Inspector">
             <svg viewBox="0 0 24 24" width="18" height="18">
                 <use xlink:href="#svg_tools" />
             </svg>
@@ -82,8 +83,8 @@
             <span id="downloads-badge" class="downloads-badge"></span>
         </span>
         <!-- Overflow menu (three dots) -->
-        <span id="toggle-menu" class="icon" role="button" tabindex="0" aria-label="Open menu"
-            aria-haspopup="true" data-tooltip="Menu">
+        <span id="toggle-menu" class="icon" role="button" tabindex="0" aria-label="Open menu" aria-haspopup="true"
+            data-tooltip="Menu">
             <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
                 <circle cx="5" cy="12" r="2" fill="currentColor"></circle>
                 <circle cx="12" cy="12" r="2" fill="currentColor"></circle>
