Redesign menu and settings UI with quick toggles
Revamps the menu to include quick toggle switches for dark theme, ad blocking, and address suggestions, with improved accessibility and live state updates. Replaces dynamic settings rendering in settings.html with static, categorized sections and updates the JS to hydrate and manage these settings, simplifying the structure and improving maintainability.

--- a/assets/menu.html
+++ b/assets/menu.html
@@ -24,6 +24,29 @@
             top: 40px;
             right: 10px;
         }
+
+        .menu-heading {
+            padding: 6px 12px;
+            font-size: 11px;
+            letter-spacing: 0.12em;
+            text-transform: uppercase;
+            color: rgba(226, 225, 234, 0.62);
+            cursor: default;
+        }
+
+        .menu-item.menu-toggle {
+            cursor: pointer;
+        }
+
+        .menu-item .menu-label {
+            flex: 1 1 auto;
+        }
+
+        .menu-item .menu-value {
+            flex: 0 0 auto;
+            font-size: 12px;
+            color: rgba(226, 225, 234, 0.7);
+        }
     </style>
 </head>
 
@@ -33,7 +56,19 @@
             <div class="menu-item" data-action="new-tab">New tab [Ctrl+T]</div>
             <div class="menu-item" data-action="new-window">New window [Ctrl+N]</div>
             <div class="menu-separator"></div>
-            <div class="menu-item" id="toggle-dark" data-action="toggle-dark">Dark theme: Toggle</div>
+            <div class="menu-heading" aria-hidden="true">Quick settings</div>
+            <div class="menu-item menu-toggle" id="toggle-dark" data-action="toggle-dark" role="menuitemcheckbox" aria-checked="false">
+                <span class="menu-label">Dark theme</span>
+                <span class="menu-value">Off</span>
+            </div>
+            <div class="menu-item menu-toggle" id="toggle-adblock" data-action="toggle-adblock" role="menuitemcheckbox" aria-checked="false">
+                <span class="menu-label">Ad blocking</span>
+                <span class="menu-value">Off</span>
+            </div>
+            <div class="menu-item menu-toggle" id="toggle-suggestions" data-action="toggle-suggestions" role="menuitemcheckbox" aria-checked="false">
+                <span class="menu-label">Address suggestions</span>
+                <span class="menu-value">Off</span>
+            </div>
             <div class="menu-separator"></div>
             <div class="menu-item" data-action="history">History [Ctrl+H]</div>
             <div class="menu-item" data-action="downloads">Downloads</div>
@@ -62,14 +97,49 @@
                 if (e.key === 'Escape') closeMenu();
             });
 
-            function refreshDarkLabel() {
+            function getSettingsValues() {
+                if (typeof window.GetSettingsSnapshot !== 'function') return null;
                 try {
-                    if (window.GetDarkModeEnabled) {
-                        const on = !!GetDarkModeEnabled();
-                        const el = document.getElementById('toggle-dark');
-                        if (el) el.textContent = 'Dark theme: ' + (on ? 'On' : 'Off');
+                    const raw = GetSettingsSnapshot();
+                    const payload = typeof raw === 'string' ? JSON.parse(raw || '{}') : raw;
+                    if (payload && typeof payload === 'object') {
+                        if (payload.values && typeof payload.values === 'object') {
+                            return payload.values;
+                        }
+                        return payload;
                     }
                 } catch { }
+                return null;
+            }
+
+            function setToggleState(id, enabled) {
+                const el = document.getElementById(id);
+                if (!el) return;
+                const on = !!enabled;
+                el.setAttribute('aria-checked', on ? 'true' : 'false');
+                const valueEl = el.querySelector('.menu-value');
+                if (valueEl) valueEl.textContent = on ? 'On' : 'Off';
+            }
+
+            function refreshQuickSettings() {
+                try {
+                    if (typeof window.GetDarkModeEnabled === 'function') {
+                        setToggleState('toggle-dark', !!GetDarkModeEnabled());
+                    }
+                } catch { }
+
+                try {
+                    if (typeof window.GetAdblockEnabled === 'function') {
+                        setToggleState('toggle-adblock', !!GetAdblockEnabled());
+                    }
+                } catch { }
+
+                const values = getSettingsValues();
+                if (values && Object.prototype.hasOwnProperty.call(values, 'enable_suggestions')) {
+                    setToggleState('toggle-suggestions', !!values.enable_suggestions);
+                } else {
+                    setToggleState('toggle-suggestions', true);
+                }
             }
 
             // Item clicks
@@ -77,6 +147,7 @@
                 const item = e.target.closest('.menu-item');
                 if (!item) return;
                 const action = item.getAttribute('data-action');
+                let shouldClose = true;
                 switch (action) {
                     case 'new-tab':
                         if (window.OnRequestNewTab) OnRequestNewTab();
@@ -86,8 +157,31 @@
                         if (window.OnRequestNewTab) OnRequestNewTab();
                         break;
                     case 'toggle-dark':
-                        if (window.OnToggleDarkMode) OnToggleDarkMode();
+                        if (window.OnToggleDarkMode) {
+                            OnToggleDarkMode();
+                            shouldClose = false;
+                            setTimeout(refreshQuickSettings, 50);
+                        }
                         break;
+                    case 'toggle-adblock':
+                        if (window.OnToggleAdblock) {
+                            OnToggleAdblock();
+                            shouldClose = false;
+                            setTimeout(refreshQuickSettings, 50);
+                        }
+                        break;
+                    case 'toggle-suggestions': {
+                        const values = getSettingsValues();
+                        const current = values && Object.prototype.hasOwnProperty.call(values, 'enable_suggestions') ? !!values.enable_suggestions : true;
+                        if (window.OnUpdateSetting) {
+                            try {
+                                OnUpdateSetting('enable_suggestions', !current);
+                            } catch { }
+                            shouldClose = false;
+                            setTimeout(refreshQuickSettings, 80);
+                        }
+                        break;
+                    }
                     case 'history':
                         if (window.OnOpenHistoryNewTab) OnOpenHistoryNewTab();
                         break;
@@ -98,11 +192,13 @@
                         if (window.OnOpenSettingsPanel) OnOpenSettingsPanel();
                         break;
                 }
-                closeMenu();
+                if (shouldClose) {
+                    closeMenu();
+                }
             });
 
             // Initialize labels
-            refreshDarkLabel();
+            refreshQuickSettings();
         })();
     </script>
 </body>
