Improve settings file handling and migration logic
Refactored settings persistence to support both primary and legacy settings file paths, ensuring proper migration and fallback. Added a dedicated LegacySettingsFilePath() method, updated directory creation logic, and improved payload writing to handle both locations. Also made minor formatting improvements in HTML files for better readability.

--- a/assets/menu.html
+++ b/assets/menu.html
@@ -57,15 +57,18 @@
             <div class="menu-item" data-action="new-window">New window [Ctrl+N]</div>
             <div class="menu-separator"></div>
             <div class="menu-heading" aria-hidden="true">Quick settings</div>
-            <div class="menu-item menu-toggle" id="toggle-dark" data-action="toggle-dark" role="menuitemcheckbox" aria-checked="false">
+            <div class="menu-item menu-toggle" id="toggle-dark" data-action="toggle-dark" role="menuitemcheckbox"
+                aria-checked="false">
                 <span class="menu-label">Dark theme</span>
                 <span class="menu-value">Off</span>
             </div>
-            <div class="menu-item menu-toggle" id="toggle-adblock" data-action="toggle-adblock" role="menuitemcheckbox" aria-checked="false">
+            <div class="menu-item menu-toggle" id="toggle-adblock" data-action="toggle-adblock" role="menuitemcheckbox"
+                aria-checked="false">
                 <span class="menu-label">Ad blocking</span>
                 <span class="menu-value">Off</span>
             </div>
-            <div class="menu-item menu-toggle" id="toggle-suggestions" data-action="toggle-suggestions" role="menuitemcheckbox" aria-checked="false">
+            <div class="menu-item menu-toggle" id="toggle-suggestions" data-action="toggle-suggestions"
+                role="menuitemcheckbox" aria-checked="false">
                 <span class="menu-label">Address suggestions</span>
                 <span class="menu-value">Off</span>
             </div>
