--- a/assets/settings.html
+++ b/assets/settings.html
@@ -406,7 +406,8 @@
             <div class="settings-content" id="settings-content">
                 <section class="settings-section" id="appearance" aria-labelledby="appearance-heading">
                     <h2 id="appearance-heading">Appearance</h2>
-                    <p class="section-hint">Adjust colors, transparency, and visual treatments for the browser chrome.</p>
+                    <p class="section-hint">Adjust colors, transparency, and visual treatments for the browser chrome.
+                    </p>
                     <div class="settings-list" data-settings-category="appearance">
                         <label class="setting-row" data-setting-key="launch_dark_theme">
                             <input type="checkbox" data-key="launch_dark_theme">
@@ -415,7 +416,8 @@
                                     <span class="setting-title">Launch in dark theme</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Start Ultralight with dark chrome, tabs, and overlays the moment it launches.</span>
+                                <span class="setting-description">Start Ultralight with dark chrome, tabs, and overlays
+                                    the moment it launches.</span>
                             </div>
                         </label>
                         <label class="setting-row" data-setting-key="experimental_transparent_toolbar">
@@ -425,7 +427,8 @@
                                     <span class="setting-title">Transparent toolbar</span>
                                     <span class="setting-note">Experimental</span>
                                 </div>
-                                <span class="setting-description">Blend the toolbar into page content using a frosted glass effect.</span>
+                                <span class="setting-description">Blend the toolbar into page content using a frosted
+                                    glass effect.</span>
                             </div>
                         </label>
                         <label class="setting-row" data-setting-key="experimental_compact_tabs">
@@ -435,7 +438,8 @@
                                     <span class="setting-title">Compact tabs</span>
                                     <span class="setting-note">Experimental</span>
                                 </div>
-                                <span class="setting-description">Reduce tab height and spacing so more tabs stay visible without scrolling.</span>
+                                <span class="setting-description">Reduce tab height and spacing so more tabs stay
+                                    visible without scrolling.</span>
                             </div>
                         </label>
                         <label class="setting-row" data-setting-key="vibrant_window_theme">
@@ -445,7 +449,8 @@
                                     <span class="setting-title">Vibrant window theme</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Apply a subtle splash of color to the frame for a more vivid finish.</span>
+                                <span class="setting-description">Apply a subtle splash of color to the frame for a more
+                                    vivid finish.</span>
                             </div>
                         </label>
                     </div>
@@ -462,7 +467,8 @@
                                     <span class="setting-title">Reduce motion effects</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Limit animated transitions and parallax so UI changes stay subtle.</span>
+                                <span class="setting-description">Limit animated transitions and parallax so UI changes
+                                    stay subtle.</span>
                             </div>
                         </label>
                         <label class="setting-row" data-setting-key="high_contrast_ui">
@@ -472,7 +478,8 @@
                                     <span class="setting-title">High contrast UI</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Boost contrast for overlays, menus, and dialogs to improve readability.</span>
+                                <span class="setting-description">Boost contrast for overlays, menus, and dialogs to
+                                    improve readability.</span>
                             </div>
                         </label>
                     </div>
@@ -480,7 +487,8 @@
 
                 <section class="settings-section" id="privacy" aria-labelledby="privacy-heading">
                     <h2 id="privacy-heading">Privacy &amp; Content</h2>
-                    <p class="section-hint">Choose how Ultralight filters requests and what data sticks around between launches.</p>
+                    <p class="section-hint">Choose how Ultralight filters requests and what data sticks around between
+                        launches.</p>
                     <div class="settings-list" data-settings-category="privacy">
                         <label class="setting-row" data-setting-key="enable_adblock">
                             <input type="checkbox" data-key="enable_adblock">
@@ -489,7 +497,8 @@
                                     <span class="setting-title">Enable ad blocking</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Filter requests with the bundled block lists to remove intrusive ads.</span>
+                                <span class="setting-description">Filter requests with the bundled block lists to remove
+                                    intrusive ads.</span>
                             </div>
                         </label>
                         <label class="setting-row" data-setting-key="log_blocked_requests">
@@ -499,7 +508,8 @@
                                     <span class="setting-title">Log blocked requests</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Write each blocked network request to the console for rule debugging.</span>
+                                <span class="setting-description">Write each blocked network request to the console for
+                                    rule debugging.</span>
                             </div>
                         </label>
                         <label class="setting-row" data-setting-key="clear_history_on_exit">
@@ -509,7 +519,8 @@
                                     <span class="setting-title">Clear history on exit</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Remove browsing history when Ultralight closes and skip saving new visits.</span>
+                                <span class="setting-description">Remove browsing history when Ultralight closes and
+                                    skip saving new visits.</span>
                             </div>
                         </label>
                     </div>
@@ -517,7 +528,8 @@
 
                 <section class="settings-section" id="suggestions" aria-labelledby="suggestions-heading">
                     <h2 id="suggestions-heading">Suggestions</h2>
-                    <p class="section-hint">Dial in the autocomplete helper that appears while you type in the address bar.</p>
+                    <p class="section-hint">Dial in the autocomplete helper that appears while you type in the address
+                        bar.</p>
                     <div class="settings-list" data-settings-category="suggestions">
                         <label class="setting-row" data-setting-key="enable_suggestions">
                             <input type="checkbox" data-key="enable_suggestions">
@@ -526,7 +538,8 @@
                                     <span class="setting-title">Show address bar suggestions</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Surface history matches and popular sites under the address bar.</span>
+                                <span class="setting-description">Surface history matches and popular sites under the
+                                    address bar.</span>
                             </div>
                         </label>
                         <label class="setting-row" data-setting-key="enable_suggestion_favicons">
@@ -536,7 +549,8 @@
                                     <span class="setting-title">Show favicons in suggestions</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Display site icons next to suggestion rows whenever an icon is available.</span>
+                                <span class="setting-description">Display site icons next to suggestion rows whenever an
+                                    icon is available.</span>
                             </div>
                         </label>
                     </div>
@@ -553,7 +567,8 @@
                                     <span class="setting-title">Show download badge</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Highlight the toolbar downloads button whenever transfers are active.</span>
+                                <span class="setting-description">Highlight the toolbar downloads button whenever
+                                    transfers are active.</span>
                             </div>
                         </label>
                         <label class="setting-row" data-setting-key="auto_open_download_panel">
@@ -563,7 +578,8 @@
                                     <span class="setting-title">Open downloads panel automatically</span>
                                     <span class="setting-note" hidden></span>
                                 </div>
-                                <span class="setting-description">Pop open the quick downloads overlay as soon as a new download starts.</span>
+                                <span class="setting-description">Pop open the quick downloads overlay as soon as a new
+                                    download starts.</span>
                             </div>
                         </label>
                     </div>
